automake plays well with include/blis_enums.inc

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,14 @@
+
+
 bin_PROGRAMS=print_enums
 print_enums_SOURCES=print_enums.c
 AM_CXXFLAGS=-pedantic -Wall
-CLEANFILES=
+EXTRA_DIST=include/blis_enums.inc
+CLEANFILES=include/blis_enums.inc
+
+all: $(bin_PROGRAMS) $(EXTRA_DIST)
+
+include/blis_enums.inc: print_enums
+	./print_enums > $@
+
+
