Generate bindings for procedures with no parameters

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ print_enums_SOURCES=print_enums.c
 AM_CXXFLAGS=-pedantic -Wall
 CLEANFILES= \
 	include/blis_enums.inc \
-	include/gemm.inc
+	include/gemm.inc \
+	include/blis_support.inc
 EXTRA_DIST=$(CLEANFILES)
 
 all: $(bin_PROGRAMS) $(EXTRA_DIST)
@@ -15,5 +16,8 @@ include/blis_enums.inc: print_enums
 
 include/gemm.inc: blis.cocci
 	spatch --sp-file $< blis_gemm.h > $@ --python `which python3`
+
+include/blis_support.inc: blis_support.cocci blis_support.h
+	spatch --sp-file $< blis_support.h > $@ --python `which python3`
 
 
