add rule (for now in testing) to remove selected functions

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,4 @@
 
-
 bin_PROGRAMS=print_enums
 print_enums_SOURCES=print_enums.c
 AM_CXXFLAGS=-pedantic -Wall
@@ -20,4 +19,5 @@ include/gemm.inc: blis.cocci
 include/blis_support.inc: blis_support.cocci blis_support.h
 	spatch --sp-file $< blis_support.h > $@ --python `which python3`
 
-
+check:
+	spatch --testall
