`make grind` transitory rule to do all; for now, headers cleanse

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,14 +1,21 @@
-
 bin_PROGRAMS=print_enums
 print_enums_SOURCES=print_enums.c
 AM_CXXFLAGS=-pedantic -Wall
+NOGIT_CLEANFILES= \
+	blis_0.h \
+	blis_1.h \
+	blis_2.h \
+	blis_3.h
+
 CLEANFILES= \
 	include/blis_enums.inc \
 	include/gemm.inc \
 	include/blis_support.inc \
-	include/string_wrappers.inc
+	include/string_wrappers.inc \
+	$(NOGIT_CLEANFILES)
 EXTRA_DIST=$(CLEANFILES)
 
+.phony: all
 all: $(bin_PROGRAMS) $(EXTRA_DIST)
 
 include/blis_enums.inc: print_enums
@@ -23,5 +30,25 @@ include/blis_support.inc: blis_support.cocci blis_support.h
 include/string_wrappers.inc: string_wrappers.cocci blis_support.h
 	spatch --sp-file $< blis_support.h > $@ --python `which python3`
 
+.phony: check
 check:
 	spatch --testall
+
+# temporary, transitory rule
+.phony: grind
+grind: $(NOGIT_CLEANFILES)
+
+blis_0.h:
+	cp $$( cpp <( echo '#include "blis.h"'; ) | grep '^#.*blis.h'| head -n 1 | awk '{ print $$3; }' | tr -d '"' ) -p $@
+# 	cp tests/noobj.c $@ # grind less ;-)
+
+blis_1.h:  tests/noobj.cocci blis_0.h
+	spatch --sp-file $+ > $@
+
+blis_2.h:  tests/noobjparm.cocci blis_1.h
+	spatch --sp-file $+ > $@
+
+blis_3.h:  tests/noattr.cocci blis_2.h
+	spatch --sp-file $+ > $@
+
+
