add configure --with-blis-header=.. option

--- a/configure.ac
+++ b/configure.ac
@@ -11,5 +11,7 @@ AC_CHECK_LIB([pthread],[main]) dnl note: main is always there
 AC_CHECK_LIB([blis],[main]) dnl note: main is always there
 AC_CHECK_LIB([gfortran],[main]) dnl note: main is always there
 AC_CONFIG_FILES([Makefile])
+AC_ARG_WITH(blis-header, AS_HELP_STRING([--with-blis-header],[Specify blis.h.  e.g.: --with-blis-header="..." ]), [if test "x$withval" = xno; then want_blis_header= ; else want_blis_header="$withval" ; fi], [want_blis_header=""])
+AC_SUBST([BLIS_HEADER],"$want_blis_header")
 AC_OUTPUT
 AC_MSG_NOTICE([Created a Makefile.])
