processing of preprocessed header

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,13 +7,15 @@ NOGIT_CLEANFILES= \
 	blis_0.h \
 	blis_1.h \
 	blis_2.h \
-	blis_3.h
+	blis_3.h \
+	blis.h.pp
 
 CLEANFILES= \
 	include/blis_enums.inc \
 	include/gemm.inc \
 	include/blis_support.inc \
 	include/string_wrappers.inc \
+	include/blis.inc
 	$(NOGIT_CLEANFILES)
 EXTRA_DIST=$(CLEANFILES)
 
@@ -24,17 +26,16 @@ include/blis_enums.inc: print_enums
 	./print_enums > $@
 
 include/gemm.inc: blis.cocci
-	spatch --sp-file $< blis_gemm.h -o $@ --python `which python3`
+	spatch --sp-file $< blis_gemm.h --python `which python3` > $@
 
 include/blis_support.inc: blis_support.cocci blis_support.h
-	spatch --sp-file $< blis_support.h -o $@ --python `which python3`
+	spatch --sp-file $< blis_support.h --python `which python3` > $@
 
 include/string_wrappers.inc: string_wrappers.cocci blis_support.h
-	spatch --sp-file $< blis_support.h -o $@ --python `which python3`
+	spatch --sp-file $< blis_support.h --python `which python3` > $@
 
-include/blis.inc: blis.cocci blis_0.h
-	spatch --sp-file $< blis_0.h -o $@ --python `which python3`
-
+include/blis.inc: blis.cocci blis.h.pp
+	spatch --sp-file $< blis.h.pp --python `which python3` > $@
 
 .phony: check
 check:
@@ -56,5 +57,9 @@ blis_2.h:  tests/noobjparm.cocci blis_1.h
 
 blis_3.h:  tests/noattr.cocci blis_2.h
 	spatch --sp-file $+ -o $@
+
+.phony: blis.h.pp
+blis.h.pp:
+	$(CC) -P -C -E $(BLIS_HEADER) -o $@
 
 
